hass/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass
  namespace: hass
  labels:
    app: hass
    app.kubernetes.io/name: hass
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hass
      app.kubernetes.io/name: hass
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hass
        app.kubernetes.io/name: hass
    spec:
      containers:
      - name: hass
        image: homeassistant/home-assistant
        imagePullPolicy: IfNotPresent
        command:
          - python
          - -m
          - homeassistant
          - --config
          - /config
          - --log-file
          - /logs/home-assistant.log
        ports:
          - name: web
            containerPort: 8123
            protocol: TCP
          - name: sonos
            containerPort: 1400
            protocol: TCP
        volumeMounts:
          #- name: hass-pvc
          #  mountPath: /config
          - name: ha-config
            mountPath: /config
          - name: ha-storage
            mountPath: /config/.storage
          - name: ha-backups
            mountPath: /config/backups
          - name: ha-log
            mountPath: /logs
          - name: hass-media-pvc
            mountPath: /media
          - name: localtime
            mountPath: /etc/localtime
            readOnly: true
          - mountPath: /etc/cont-init.d/
            name: pre-script
            readOnly: true
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "2048Mi"
            cpu: "1000m"
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
              - NET_BROADCAST
#        readinessProbe:
#          exec:
#            command:
#            - /bin/sh
#            - -c
#            - .curl --connect-timeout 10 --silent -f http://127.0.0.1:8123/ || exit 1
#          initialDelaySeconds: 5
#          periodSeconds: 10
#          failureThreshold: 3
#          timeoutSeconds: 1
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: ha-config
          persistentVolumeClaim:
            claimName: hass
        - name: ha-storage
          persistentVolumeClaim:
            claimName: hass-longhorn 
        - name: ha-backups
          persistentVolumeClaim:
            claimName: hass-backup
        - name: ha-log
          emptyDir: {}
#        - name: hass-pvc
#          persistentVolumeClaim:
#            claimName: hass
        - name: hass-media-pvc
          persistentVolumeClaim:
            claimName: hass-media
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: pre-script
          configMap:
            name: hass-pre-script
            defaultMode: 0755
