hass/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hass
    app.kubernetes.io/name: hass
  name: hass
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.30.51
spec:
  selector:
    app: hass
    app.kubernetes.io/name: hass
  ports:
  - name: hass
    port: 8123
    targetPort: 8123
  - name: sonos
    port: 1400
    targetPort: 1400
  type: LoadBalancer
